# xray

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .lldbinit  CMakeLists.txt  CMakePresets.json  Dockerfile.build  LANGUAGE_SPEC.md  LANGUAGE_SPEC_CN.md  README.md  README_CN.md  _build_jit.bat  build_log.txt  collection_methods.xrc  docker_run.sh  test_defer.xrc  test_log.txt
.github/workflows/: _format-fix.yml  ci.yml  nightly.yml  release.yml
bench/: README.md  vm_invoke_microbench.xr  vm_microbench.xr
demos/: README.md
demos/01-basics/: control_flow.xr  functions.xr  hello.xr  tuples.xr  variables.xr
demos/02-collections/: arrays.xr  json_processing.xr  maps_and_sets.xr
demos/03-oop/: classes.xr  structs_and_interfaces.xr
demos/04-functional/: functional.xr
demos/05-concurrency/: channels.xr  goroutines.xr  select_and_scope.xr  shared_data.xr
demos/06-networking/: http_server.xr
demos/07-advanced/: generics.xr  testing.xr
docs/: README.md  known_bugs.md
docs/archive/: 023-comment-cleanup.md  073-codegen-hardening.md  073-xisa-implementation.md  074-codegen-final-plan.md  075-codegen-final-spec.md  451_cluster_source_reading.md  aot-implementation-plan-gpt.md  aot-refactor-plan.md  cli_refactor_plan.md  coro_refactor_plan.md  module_restructure_plan.md  xisa_design.md  xray-cluster-design.md
docs/design/: 500_jit_architecture_redesign.md  801_struct_memory_safety.md  802_struct_demo_scenarios.md  810_transpile_to_c_design.md  820_coroutine_association.md  830_cps_coroutine.md  831_gui_framework_design.md  900_architecture_governance.md  901_c_engineering_standards.md  904_code_quality_roadmap.md  aot-design.md  coroutine_kotlin_alignment.md  generics-refactor.md  ir-rename-and-opt-unification.md  json-unification.md  kotlin_coroutine_analysis.md  mcp-server.md  unified_class.md
docs/engineering/: README.md  (+17 more)
include/: xray.h  xray_embedding.h  xray_export.h  xray_isolate.h  xray_module_sdk.h  xray_old.h  xray_platform.h  xray_runtime.h  xray_version.h  xray_version.h.in
scripts/: README.md  add_type_annotations.py  bump-version.sh  check_architecture.sh  check_codegen_invariants.sh  check_comment_rules.sh  check_frontend_arch.sh  check_jit_safety.sh  check_known_failures_freshness.sh  check_platform_layering.sh  check_temp_workarounds.sh  embed_native_types.py  gen_builtin_hash.py  gen_language_docs.py  gen_mcp_knowledge.py  gen_stdlib_types.py  gen_xemit_typed.py  install-hooks.sh  install.sh  jit_fuzz.sh  lldb_debug.sh  migrate_arrow_c.py  migrate_arrow_doc.py  migrate_arrow_md.py  migrate_arrow_ts.py  migrate_arrow_xr.py  migrate_tests_to_attest.py  migrate_xemit_typed.py  package.sh  perf_regression.sh  pre-commit  rename_xir_to_xm.sh  repro_jit_force_burn.sh  repro_win11_coro_burn.sh  run_compile_error_tests.sh  run_coro_benchmark.sh  run_dap_regression_tests.sh  run_fuzz_30min.sh  run_gc_stress.sh  run_jit_all_tests.sh  (+16 more)
stdlib/: common.h  common_io.h  common_parser.h  common_writer.h  ctxbuf.h  stdlib_cache.c  stdlib_cache.h
tests/: baseline_silent_fallback.txt  bug_verification_2026_05_17.md  known_failures.txt  known_temp_workarounds.md
tests/fuzz/: CMakeLists.txt  README.md  fuzz_lexer.c  fuzz_parser.c
tests/unit/: CMakeLists.txt  test_framework.h  test_helper.h  test_win_compat.h
tests/unit/analyzer/: .!55191!test_mono.c  test_analyzer.c  test_interface_conformance.c  test_mono.c
tests/unit/api/: test_api_defense.c  test_repl.c
tests/unit/base/: test_config.c  test_intmap.c  test_log.c  test_mem_profiler.c  test_mutex.c  test_simd.c  test_swar.c  test_xmalloc.c
tests/unit/cli/: test_cli_fs.c  test_cli_spec.c
tests/unit/coro/: test_mpsc_queue.c  test_steal_queue.c
tests/unit/dap/: test_dap_breakpoints.c  test_dap_server.c  test_dap_transport.c
tests/unit/encoding/: test_base64.c  test_hex_encoding.c  test_unicode.c  test_url_encoding.c
tests/unit/frontend/: test_analyzer_incremental.c  test_analyzer_remove_file.c  test_ast_side_table.c  test_ast_visit_coverage.c  test_diag_fmt.c  test_fmt_roundtrip.c  test_formatter_comments.c  test_formatter_strings.c  test_frontend_architecture.c  test_lexer.c  test_lexer_keywords.c  test_lexer_positions.c  test_lexer_trivia.c  test_parser.c  test_parser_recoverable.c  test_parser_type_scope.c  test_scope_tree.c  test_selection_facts.c  test_symbol_binding.c  test_xa_selection.c  test_xfmt_literal.c
tests/unit/gc/: test_immix_gc.c
tests/unit/http/: test_http2_huffman.c  test_http_cookie.c  test_http_multipart.c  test_http_parser.c
tests/unit/ir/: test_xi.c  test_xi_analysis.c  test_xi_cgen.c  test_xi_compare.c  test_xi_effect.c  test_xi_emit.c  test_xi_escape.c  test_xi_intrinsic.c  test_xi_lower.c  test_xi_lower_hardfail.c  test_xi_opt.c  test_xi_pipeline.c  test_xi_stage.c  test_xi_to_xir.c  test_xi_to_xir_e2e.c  test_xi_to_xm.c  test_xi_to_xm_e2e.c
tests/unit/jit/: test_aot_e2e.c  test_arm64_emit.c  test_code_alloc.c  test_jit_e2e.c  test_peephole.c  test_x64_emit.c  test_xir.c  test_xir_bset.c  test_xir_builder.c  test_xir_defuse.c  test_xir_fold.c  test_xir_liveness2.c  test_xir_pass.c  test_xm.c  test_xm_bset.c  test_xm_defuse.c  test_xm_fold.c  test_xm_liveness2.c  test_xm_pass.c
tests/unit/lsp/: test_lsp_config.c  test_lsp_diagnostics.c  test_lsp_document.c  test_lsp_json.c  test_lsp_navigation.c
tests/unit/mcp/: test_mcp_protocol.c  test_mcp_transport.c
tests/unit/module/: test_lockfile.c  test_resolver.c  test_semver.c  test_source_cache.c
tests/unit/object/: test_dynamic_class.c  test_typed_array.c  test_utf8.c  test_xarray.c  test_xmap.c  test_xset.c  test_xstring.c  test_xtuple.c
tests/unit/regex/: test_regex.c
tests/unit/stdlib/: test_buffer_pool.c  test_compress.c  test_crypto.c  test_datetime.c  test_prelude_init.c  test_xml_node.c
tests/unit/symbol/: test_symbol.c
tests/unit/util/: test_arena.c  test_dynarray.c  test_hashmap.c  test_xhash.c
tests/unit/value/: test_method_table.c  test_xvalue.c
tests/unit/vm/: test_ic.c  test_ic_concurrent.c  test_instruction.c  test_opcode.c  test_vm_api.c  test_vm_exception.c
(+2153 files in other folders)
